--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- PWA Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="CD Tracker" />
+    <meta name="application-name" content="CD Tracker" />
+    <meta name="theme-color" content="#005eb8" />
+    <meta name="msapplication-TileColor" content="#005eb8" />
+    <meta name="msapplication-navbutton-color" content="#005eb8" />
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/CDTracker/manifest.json" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="/CDTracker/icon-192.svg" />
+    <link rel="apple-touch-icon" href="/CDTracker/icon-192.svg" />
+
     <title>CD Tracker - Theatre Pharmacy</title>
   </head>
   <body>
